# kliipit-pipeline

./: .gitignore  Cargo.toml  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  audio_common.glsl  kliipit_pipeline.gemspec  pipeline.rb
.github/workflows/: main.yml
data/shaders/: cartopol.frag  discoteq.frag  domain_warp.frag  feedback_rota.frag  glitch.frag  gloop.frag  interference.frag  kaleidoscope.frag  luma_displace.frag  noise_terrain.frag  noise_warp.frag  overdrive.frag  ripple_displace.frag  rutt_etra.frag  showfreqs.frag  showwaves.frag  spectrum_ring.frag  tile_mosaic.frag  twirl.frag  vcr_distortion.frag  vfield_sort.frag
exe/: kliipit-pipeline
ext/kliipit_pipeline/: Cargo.toml  extconf.rb
ext/kliipit_pipeline/src/: lib.rs
lib/: kliipit_pipeline.rb
lib/kliipit_pipeline/: audio_analyzer.rb  cli.rb  encoder.rb  layer.rb  pipeline.rb  renderer.rb  shader_loader.rb  version.rb
samples/compositions/: arecibo_3movements.yml  arecibo_domainwarp_vcr.yml  arecibo_luma_glitch.yml  arecibo_noisewarp_overdrive.yml  arecibo_ripple_twirl.yml
shaders/: audio_3d.frag  chaolotus.frag  domain_warp.frag  glitch.frag  morphblob.frag  overdrive.frag  pixel_sort.frag  pixel_sort_display.frag  plasma_globe.frag  radial_spectrum.frag  rutt_etra.frag  vcr_distortion.frag  vfield_sort.frag  vfield_sort_display.frag
sig/: kliipit_pipeline.rbs
test/: test_helper.rb  test_kliipit_pipeline.rb  test_layer.rb  test_shader_loader.rb
